# rich-dataframe

./: .gitignore  .pre-commit-config.yaml  README.md  example.py  pyproject.toml
rich_dataframe/: __init__.py  rich_dataframe.py
